# CarryBench

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  colab_run.ipynb  pyproject.toml  requirements-lock-cpu.txt  requirements.txt
.github/workflows/: tests.yml
artifacts/final/: README.md  benchmark_kv_cache_summary.csv  benchmark_summary.csv  summary_aggregate.csv  summary_aggregate.md  summary_table.csv  summary_table.md
artifacts/final/raw/: benchmark_jax_colab_gpu.json  benchmark_jax_colab_gpu_sdpa_bf16.json  benchmark_kv_cache_colab_gpu.json  benchmark_torch_colab_gpu.json  benchmark_torch_colab_gpu_sdpa.json  benchmark_torch_colab_gpu_sdpa_bf16_compile.json  benchmark_torch_colab_gpu_sdpa_compile.json  train_jax_colab_answer_only_5digit_seed0.json  train_jax_colab_answer_only_5digit_seed1.json  train_jax_colab_sweep_5digit_seed0.json  (+35 more)
configs/: colab_answer_only_5digit.yaml  colab_answer_only_6digit.yaml  colab_answer_only_6digit_long.yaml  colab_gpu.yaml  colab_reversed_answer_5digit.yaml  colab_reversed_answer_6digit.yaml  colab_sweep_5digit.yaml  colab_sweep_6digit.yaml  smoke.yaml
docs/: BENCHMARK_PROTOCOL.md  LIMITATIONS.md
scripts/: export_release_artifacts.sh  run_final_experiments.sh  run_smoke.sh
src/: benchmark.py  data.py  flax_model.py  generate_jax.py  kv_cache_jax.py  metrics.py  plot_results.py  summarize_results.py  tokenizer.py  torch_model.py  train_jax.py  train_torch.py  utils.py
tests/: test_data.py  test_framework_parity.py  test_generation.py  test_summarize_results.py  test_tokenizer.py  test_torch_model.py  test_utils.py
